--- a/client/css/presentation.scss
+++ b/client/css/presentation.scss
@@ -100,6 +100,17 @@ html, body {
             display: grid;
             grid-template-columns: 1fr 1fr;
             grid-column-gap: 32px;
+            perspective: 1000px;
+            transform: translateZ(0);
+
+            & .question__answer-label {
+              &--correct {
+                transform: translateZ(90px);
+              }
+              &--incorrect {
+                transform: translateZ(-90px);
+              }
+            }
           }
         }
       }
